fix: loading spinner is overlapped

--- a/all.scss
+++ b/all.scss
@@ -130,10 +130,13 @@ body {
   }
 }
 .loading{
-  position: absolute;
   right: 1.3em;
   top: 1.3em;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  z-index: 9000;
 }
+
 
 .extension-switch {
   &.ant-switch-checked {
